; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_io.c_new_interface.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/ntpd/extr_ntp_io.c_new_interface.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.interface = type { i32, i64 }

@sys_ifnum = common dso_local global i32 0, align 4
@current_time = common dso_local global i32 0, align 4
@LOG_EMERG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.interface* (%struct.interface*)* @new_interface to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.interface* @new_interface(%struct.interface* %0) #0 {
  %2 = alloca %struct.interface*, align 8
  %3 = alloca %struct.interface*, align 8
  store %struct.interface* %0, %struct.interface** %2, align 8
  %4 = call %struct.interface* @emalloc(i32 16)
  store %struct.interface* %4, %struct.interface** %3, align 8
  %5 = load %struct.interface*, %struct.interface** %2, align 8
  %6 = icmp eq %struct.interface* null, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.interface*, %struct.interface** %3, align 8
  %9 = call i32 @init_interface(%struct.interface* %8)
  br label %14

10:                                               ; preds = %1
  %11 = load %struct.interface*, %struct.interface** %3, align 8
  %12 = load %struct.interface*, %struct.interface** %2, align 8
  %13 = call i32 @memcpy(%struct.interface* %11, %struct.interface* %12, i32 16)
  br label %14

14:                                               ; preds = %10, %7
  %15 = load i32, i32* @sys_ifnum, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* @sys_ifnum, align 4
  %17 = sext i32 %15 to i64
  %18 = load %struct.interface*, %struct.interface** %3, align 8
  %19 = getelementptr inbounds %struct.interface, %struct.interface* %18, i32 0, i32 1
  store i64 %17, i64* %19, align 8
  %20 = load i32, i32* @current_time, align 4
  %21 = load %struct.interface*, %struct.interface** %3, align 8
  %22 = getelementptr inbounds %struct.interface, %struct.interface* %21, i32 0, i32 0
  store i32 %20, i32* %22, align 8
  %23 = load %struct.interface*, %struct.interface** %3, align 8
  ret %struct.interface* %23
}

declare dso_local %struct.interface* @emalloc(i32) #1

declare dso_local i32 @init_interface(%struct.interface*) #1

declare dso_local i32 @memcpy(%struct.interface*, %struct.interface*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
